# bicameral

./: .gitignore  DEPLOYMENT-COMPLETE.md  README.md  pyproject.toml  requirements.txt
config/: .env.example  1password.json  docker-compose.yml
deploy/launchd/: install.sh
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: setup.sh  test_1password.sh  validate.sh
scripts/bicameral/: __init__.py  __main__.py  client.py  config.py  init.py  listener.py  monitor.py  secrets.py  service.py  sync.py
scripts/cli/: interactive.sh
