[project]
name = "bicameral"
version = "2.1.0"
description = "AI collaboration infrastructure - portable messaging between Claude & Gemini"
authors = [{name = "Team RADIORHINO", email = "hello@rhncrs.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "collaboration", "redis", "claude", "gemini", "messaging", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/florentchenet/bicameral"
Documentation = "https://github.com/florentchenet/bicameral#readme"
Repository = "https://github.com/florentchenet/bicameral"
Issues = "https://github.com/florentchenet/bicameral/issues"
Changelog = "https://github.com/florentchenet/bicameral/releases"

[project.scripts]
bicameral = "bicameral.__main__:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bicameral"]
package-dir = {"" = "scripts"}

[tool.setuptools.package-data]
bicameral = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=bicameral --cov-report=term-missing"
